# FlightSimHub

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml  release-master.yml
cmake/: windowsappsdk.cmake
data/: catalog.json
docs/superpowers/plans/: 2026-07-16-flightsimhub.md
docs/superpowers/specs/: 2026-07-16-flightsimhub-design.md
installer/: FlightSimHub.wxs
src/: CMakeLists.txt
src/app-winui3/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  EnvironmentPage.idl  EnvironmentPage.xaml  EnvironmentPage.xaml.cpp  EnvironmentPage.xaml.h  FilePicker.cpp  FilePicker.h  Globals.cpp  Globals.h  LaunchersPage.idl  LaunchersPage.xaml  LaunchersPage.xaml.cpp  LaunchersPage.xaml.h  Main.cpp  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  UiHelpers.h  app.manifest  pch.h  winui3-boilerplate.cmake
src/lib/: AppDefinition.cpp  CMakeLists.txt  Detector.cpp  Installer.cpp  LauncherEngine.cpp  Settings.cpp  ShortcutWriter.cpp  Strings.cpp  WindowsProbe.cpp
src/lib/include/FSHub/: AppDefinition.hpp  Detector.hpp  Installer.hpp  LauncherEngine.hpp  Settings.hpp  ShortcutWriter.hpp  Strings.hpp  WindowsProbe.hpp
tests/: CMakeLists.txt  CatalogTest.cpp  DetectorTest.cpp  InstallerTest.cpp  LaunchPlanTest.cpp  SettingsTest.cpp
